...
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <searchBar contentMode="redraw" placeholder="Search Track" translatesAutoresizingMaskIntoConstraints="NO" id="ZlK-i7-txF">
                    <rect key="frame" x="0.0" y="67" width="393" height="56"/>
                    <textInputTraits key="textInputTraits"/>
                    <connections>
                        <outlet property="delegate" destination="-1" id="VPe-t7-6ZV"/>
                    </connections>
                </searchBar>
...
